@@ -1,5 +1,13 @@
 2006-03-02  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/GtkNSSDialogs.cpp:
+	* embed/mozilla/GtkNSSKeyPairDialogs.cpp:
+	* embed/mozilla/GtkNSSSecurityWarningDialogs.cpp:
+
+	Make these implement threadsafe isupports.
+
+2006-03-02  Christian Persch  <chpe@cvs.gnome.org>
+
 	* embed/mozilla/EventContext.cpp:
 
 	Don't activate typeaheadfind on XUL documents.
